[project]
name = "ComfyUI_SamplingUtils"
description = "Utilities making it easy to set up inference parameters."
version = "0.4.2"
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/silveroxides/ComfyUI_SamplingUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "silveroxides"
DisplayName = "ComfyUI_SamplingUtils"
Icon = "https://github.com/silveroxides/ComfyUI_SamplingUtils/raw/refs/heads/main/assets/tools-icon.png"
