[project]
name = "ComfyUI_SamplingUtils"
description = "DEPRECATED. Install ComfyUI-UtilsCollection instead from https://github.com/silveroxides/ComfyUI-UtilsCollection"
version = "0.5.15"
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/silveroxides/ComfyUI_SamplingUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "silveroxides"
DisplayName = "ComfyUI_SamplingUtils"
Icon = "https://github.com/silveroxides/ComfyUI_SamplingUtils/raw/refs/heads/main/assets/tools-icon.png"
